--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -511,6 +511,9 @@
   "NoAccessPage.postListings.schemaTitle": "No publishing rights",
   "NoAccessPage.postListings.heading": "You can't publish listings",
   "NoAccessPage.postListings.content": "You need to receive publishing rights from the {marketplaceName} team.",
+  "NoAccessPage.viewListings.schemaTitle": "No viewing rights",
+  "NoAccessPage.viewListings.heading": "You don't have viewing rights",
+  "NoAccessPage.viewListings.content": "To view this content, you need to receive viewing rights from the {marketplaceName} team.",
   "NoAccessPage.userPendingApproval.schemaTitle": "No user approval",
   "NoAccessPage.userPendingApproval.heading": "Your account is waiting for approval",
   "NoAccessPage.userPendingApproval.content": "You need approval from the {marketplaceName} team to get access to the marketplace.",
